--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -23,9 +23,9 @@
     </div>
     <div class="mb-3">
       <div class="form-label border-start border-primary border-4 ps-1">
-        <%= t('activerecord.attributes.order.delivery_address') %>
+        <%= t('activerecord.attributes.order.payment_method_id') %>
       </div>
-      <%= @order.delivery_address %>
+      <%= @order.payment_method.name %>
     </div>
   </div>
 
@@ -34,7 +34,9 @@
     <%= f.hidden_field :email %>
     <%= f.hidden_field :telephone %>
     <%= f.hidden_field :delivery_address %>
-    <div class="d-grid col-md-6 mx-auto">
+    <%= f.hidden_field :payment_method_id %>
+
+    <div class="d-grid col-md-6 mx-auto mb-3">
       <%= f.button 'OK', class: 'btn btn-lg btn-primary' %>
     </div>
   <% end %>
