テスト失敗により、コード見直し. orders_spec.rb。</div>削除。new.html.erb。戻るボタン追加。confirm.html.erb

--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -39,5 +39,8 @@
     <div class="d-grid col-md-6 mx-auto mb-3">
       <%= f.button 'OK', class: 'btn btn-lg btn-primary' %>
     </div>
+    <div class='d-grid col-md-6 mx-auto'>
+      <%= f.button '戻る', value: 'back', class: 'btn btn-lg btn-secondary' %>
+    </div>
   <% end %>
 </div>
