--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -11,7 +11,7 @@
     
       <div class="mb-3">
         <%= f.label :email, class: 'form-label border-start border-primary border-4 ps-1' %>
-        <%= f.text_field :email, size: 100, placeholder: 'example@email.com', class: 'form-control' %>
+        <%= f.text_field :email, size: 100, placeholder: 'sample@example.com', class: 'form-control' %>
         <%= render partial: "shared/error_messages", locals: { record: @order, symbol: :email } %>
       </div>
     
@@ -38,10 +38,27 @@
         <%= f.text_area :other_comment, size: '60x6', placeholder: 'その他、ご要望ありましたらご入力ください', class: 'form-control' %>
         <%= render partial: 'shared/error_messages', locals: { record: @order, symbol: :other_comment } %>
       </div>
-    </div>
+
+      <div class="mb-3">
+        <%= f.label :direct_mail_enabled, class: 'form-label border-start border-primary border-4 ps-1' %>
+        <div class="mb-2 fs-6">*お得な情報満載のメールマガジンを配信しております。</div>
+        <div class='form-check form-check-inline'>
+          <label class='form-check-label'>
+            <%= f.radio_button :direct_mail_enabled, false, class: 'form-check-input' %>
+            配信は不要
+          </label>
+        </div>
+        <div class='form-check form-check-inline'>
+          <label class='form-check-label'>
+            <%= f.radio_button :direct_mail_enabled, true, class: 'form-check-input' %>
+            配信を希望する
+          </label>
+        </div>
+        <%= render partial: 'shared/error_messages', locals: { record: @order, symbol: :direct_mail_enabled } %>
+      </div>
 
     <div class="d-grid col-md-6 mx-auto">
-      <%= f.button '確認画面へ', class: 'btn btn-lg btn-primary' %>
+      <%= f.submit '確認画面へ', class: 'btn btn-lg btn-primary' %>
     </div>
   <% end %>
 </div>
